<resources>
    <string name="app_name">Kyrsovaya_Yudakova</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SlovarTerminov">Словарь темринов</string>
    <string name="Java">Java</string>
    <string name="Voity">Войти</string>
    <string name="Parol">Пароль</string>
    <string name="Login">Логин</string>
    <string name="EnterWord">Введите слово и его значение</string>
    <string name="Slovo">Слово</string>
    <string name="Def">Значение</string>
    <string name="Add">Добавить</string>
    <string name="FindWord">Введите слово, которое хотите найти: </string>
    <string name="Find">Найти</string>
    <string name="BestJava">Лучший словарь по Java!</string>
    <string name="Developer">Разработчик Юдакова Ангелина РИБО-02-21</string>



</resources>