<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilterFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/FindWord"
            android:textSize="24dp"
            android:layout_marginTop="100dp"/>

        <EditText
            android:id="@+id/etWordFilter"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="180dp"

            android:hint="@string/Slovo"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:textSize="24sp" />
        <Button
            android:id="@+id/btnFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Find"
            android:backgroundTint="@color/orange"
            android:layout_gravity="center"
            android:layout_marginTop="230dp"
            android:textColor="@color/black"
            android:textSize="20dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"/>
    </RelativeLayout>
</FrameLayout>